About title fix on mobile and button shadow for About page

--- a/stylesheet/custom.scss
+++ b/stylesheet/custom.scss
@@ -172,6 +172,12 @@ h6 {
 
 #about-btn {
     width: 100%;
+    box-shadow: 0px 0px 10px 0px $secondary;
+    transition: box-shadow 1s ease-in-out;
+
+    &:hover {
+        box-shadow: 0px 0px 0px 0px $secondary;
+    }
 }
 
 #youtube-video {
